enviar email WIP

--- a/spa-html-template/index.html
+++ b/spa-html-template/index.html
@@ -337,7 +337,7 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <input type="email" class="form-control bg-transparent p-4" placeholder="Your Type Of Business"
+                                    <input type="string" class="form-control bg-transparent p-4" placeholder="Your Type Of Business"
                                         required="required" />
                                 </div>
                             </div>
@@ -492,7 +492,7 @@
                                         (Reels)</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>✓Advertising Content Boost</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>($30 Budget Included)</p>
-                                    <a href="" class="btn btn-primary my-2">More</a>
+                                    <a href="#termsAndConditions" class="btn btn-primary my-2" >More</a>
                                     <a href="" class="btn btn-primary my-2">Order Now</a>
                                 </div>
                             </div>
@@ -515,7 +515,7 @@
                                         (Reels)</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>✓Advertising Content Boost</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>($50 Budget Included)</p>
-                                    <a href="" class="btn btn-primary my-2">More</a>
+                                    <a href="#termsAndConditions" class="btn btn-primary my-2" >More</a>
                                     <a href="" class="btn btn-primary my-2">Order Now</a>
                                 </div>
                             </div>
@@ -538,7 +538,7 @@
                                         Videos (Reels.)</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>✓Advertising Content Boost</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>($100 Budget Included)</p>
-                                    <a href="" class="btn btn-primary my-2">More</a>
+                                    <a href="#termsAndConditions" class="btn btn-primary my-2" >More</a>
                                     <a href="" class="btn btn-primary my-2">Order Now</a>
                                 </div>
                             </div>
@@ -576,7 +576,7 @@
                                     <p><i class="fa fa-check text-success mr-2"></i>✓ Content consulting</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>✓ Optimization for mobile devices</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>✓ Integration with social networks and professional platforms</p>
-                                    <a href="" class="btn btn-primary my-2">More</a>
+                                    <a href="#termsAndConditions" class="btn btn-primary my-2" >More</a>
                                     <a href="" class="btn btn-primary my-2">Order Now</a>
                                 </div>
                             </div>
@@ -775,24 +775,43 @@
                                     class="fab fa-instagram"></i></a>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-6 pl-lg-5">
+                    <div class="col-lg-6 pl-lg-5">
                         <div class="row">
-                            <div class="col-sm-6 mb-5">
-                                <h5 class="text-white text-uppercase mb-4">Quick Links</h5>
+                            <div class="col-sm-6 mb-5" id="termsAndConditions">
+                                <h5 class="text-white text-uppercase mb-4">Terms and conditions</h5>
                                 <div class="d-flex flex-column justify-content-start">
-                                    <a class="text-white-50 mb-2" href="#"><i
-                                            class="fa fa-angle-right mr-2"></i>Home</a>
-                                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About
-                                        Us</a>
-                                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our
-                                        Services</a>
-                                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Pricing
-                                        Plan</a>
-                                    <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contact
-                                        Us</a>
+                                    <ul>
+                                        <li>
+                                            Business and Brand Audit.
+                                        </li>
+                                        <li>
+                                            Potential Customers & Hashtag Research.
+                                        </li>
+                                        <li>           
+                                            Tailoring of Social Media Strategy.
+                                        </li>
+                                        <li> 
+                                            Profile Re-Design & Optimization.
+                                        </li>
+                                        <li>        
+                                            Weekly Posting Approval by Customer.
+                                        </li>
+                                        <li>                   
+                                            Posting Begins on Day 10.
+                                        </li>
+                                    </ul> 
                                 </div>
+                                <h6 class="text-white text-uppercase mb-4">Glaze over these benefits:</h6>
+                                <ul>
+                                    <li>Assigned Community Manager.</li>
+                                    <li>We Monitor and Reply to Messages</li>
+                                    <li>Weekly Actionable Report and Insights.</li>
+                                    <li>Complimentary Promotional Design.</li>
+                                    <li>Daily Ticketing and E-mail Support.</li>
+                                    <li>Complimentary Instagram Highlights Design.</li>
+                                </ul>
                             </div>
-                            <div class="col-sm-6 mb-5">
+                            <!-- <div class="col-sm-6 mb-5">
                                 <h5 class="text-white text-uppercase mb-4">Our Services</h5>
                                 <div class="d-flex flex-column justify-content-start">
                                     <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Body
@@ -806,8 +825,8 @@
                                     <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Nail
                                         Care</a>
                                 </div>
-                            </div>
-                            <div class="col-sm-12 mb-5">
+                            </div> -->
+                            <!-- <div class="col-sm-12 mb-5">
                                 <h5 class="text-white text-uppercase mb-4">Newsletter</h5>
                                 <div class="w-100">
                                     <div class="input-group">
@@ -815,10 +834,10 @@
                                             placeholder="Your Email Address">
                                         <div class="input-group-append">
                                             <button class="btn btn-primary px-4">Sign Up</button>
-                                        </div> -->
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -830,9 +849,6 @@
                 <div class="row">
                     <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
                         <p class="m-0 text-white">&copy; <a href="#">Your Site Name</a>. All Rights Reserved.</p>
-                    </div>
-                    <div class="col-md-6 text-center text-md-right">
-                        <p class="m-0 text-white">Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
                     </div>
                 </div>
             </div>
