--- a/spa-html-template/index.html
+++ b/spa-html-template/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Aesir digital</title>
+    <title>Nanna digital</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -24,10 +24,27 @@
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
+
     <link href="css/style.css" rel="stylesheet">
+    <script>
+        async function translatePage() {
+          const translator = new Microsoft.Translator({apiKey: 'YOUR_API_KEY'}); // Reemplaza 'YOUR_API_KEY' con tu propia clave de API
+          const originalLanguage = await translator.getLanguage();
+    
+          // Detecta el idioma actual de la página y lo traduce a inglés
+          if (originalLanguage !== 'en') {
+            await translator.translate('es', 'en');
+          }
+        }
+    
+        // Traduce la página automáticamente al cargarla
+        window.addEventListener('DOMContentLoaded', translatePage);
+      </script>
+
 </head>
 
 <body>
+
     <!-- Topbar Start -->
     <div class="container-fluid bg-light d-none d-lg-block">
         <div class="row py-2 px-lg-5">
@@ -66,7 +83,7 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
-                <h1 class="m-0 text-primary"><span class="text-dark">Digital</span> Agency</h1>
+                <h1 class="m-0 text-primary"><span class="text-dark">Nanna</span> Digital</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -74,7 +91,7 @@
             <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav m-auto py-0">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="service.html" class="nav-item nav-link">Spanish</a>
+                    <!-- <a href="service.html" class="nav-item nav-link">Spanish</a> -->
                     <!-- <a href="price.html" class="nav-item nav-link">Pricing</a> -->
                     <!-- <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
@@ -106,7 +123,7 @@
             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                 <div class="p-3" style="max-width: 900px;">
                     <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown"
-                    style="letter-spacing: 3px;">Æsir Marketing Digital</h6>
+                    style="letter-spacing: 3px;">Nanna Digital</h6>
                 <p class="mx-md-5 px-5">We will develop strategic plans adapted to the company's objectives
                     and needs.</p>
                 <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp"
@@ -242,7 +259,7 @@
         <div class="row mx-0 justify-content-center text-center">
             <div class="col-lg-6">
                 <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Our Service</h6>
-                <h1>Æsir Marketing Digital</h1>
+                <h1>Nanna Marketing Digital</h1>
             </div>
         </div>
         <div class="owl-carousel service-carousel">
@@ -368,10 +385,11 @@
                                 <div class="form-group">
                                     <select class="custom-select bg-transparent px-4" style="height: 47px;">
                                         <option selected>Select A Marketing Service</option>
-                                        <option value="1">SILVER</option>
-                                        <option value="2">GOLD</option>
-                                        <option value="3">PLATINUM</option>
-                                        <option value="4">RHODIUM</option>
+                                        <option value="1">None</option>
+                                        <option value="2">SILVER</option>
+                                        <option value="3">GOLD</option>
+                                        <option value="4">PLATINUM</option>
+                                        <option value="5">RHODIUM</option>
                                     </select>
                                 </div>
                             </div>
@@ -395,7 +413,8 @@
                                         <option value="1">America - USA </option>
                                         <option value="2">Europe</option>
                                         <option value="3">Latin America</option>
-                                        <option value="4">Other</option>
+                                        <option value="4">Argentina</option>
+                                        <option value="5">Other</option>
                                     </select>
                                 </div>
                             </div>
@@ -593,8 +612,8 @@
         <div class="container pt-5">
             <div class="row justify-content-center text-center">
                 <div class="col-lg-6">
-                    <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Nuestras especialistas</h6>
-                    <h1 class="mb-5">Marketing</h1>
+                    <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Our Team</h6>
+                    <h1 class="mb-5"></h1>
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -645,8 +664,8 @@
                         <img class="img-fluid" src="img/team-3.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <h5 class="text-white text-uppercase">Magalí Mosqueira</h5>
-                                <p class="m-0">Marketing Specialist</p>
+                                <h5 class="text-white text-uppercase">Lorena Araya</h5>
+                                <p class="m-0">Creative Director</p>
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <!-- <a class="btn btn-outline-primary btn-square mr-2" href="#"><i
@@ -666,8 +685,8 @@
                         <img class="img-fluid" src="img/team-4.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <h5 class="text-white text-uppercase">Lorena Araya</h5>
-                                <p class="m-0">Creative Director</p>
+                                <h5 class="text-white text-uppercase">Magalí Mosqueira</h5>
+                                <p class="m-0">Marketing Specialist</p>
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <!-- <a class="btn btn-outline-primary btn-square mr-2" href="#"><i
@@ -758,12 +777,10 @@
                 <div class="row">
                     <div class="col-lg-6 pr-lg-5 mb-5">
                         <a href="index.html" class="navbar-brand">
-                            <h1 class="mb-3 text-white"><span class="text-primary">Digital</span> Marketing</h1>
+                            <h1 class="mb-3 text-white"><span class="text-primary">Nanna</span>Digital</h1>
                         </a>
                         <p>For plans in Argentina, please contact us at the following email</p>
-                        <p><i class="fa fa-map-marker-alt mr-2"></i>international</p>
-                        <p><i class="fa fa-phone-alt mr-2"></i>+54 9 0341 3138290</p>
-                        <p><i class="fa fa-envelope mr-2"></i>lorenaaraya788@gmail.com</p>
+
                         <div class="d-flex justify-content-start mt-4">
                             <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i
                                     class="fab fa-twitter"></i></a>
@@ -779,6 +796,7 @@
                         <div class="row">
                             <div class="col-sm-6 mb-5" id="termsAndConditions">
                                 <h5 class="text-white text-uppercase mb-4">Terms and conditions</h5>
+                                <h6 class="text-white text-uppercase mb-2">1 ferst week free</h6>
                                 <div class="d-flex flex-column justify-content-start">
                                     <ul>
                                         <li>
