añadi a la vendedora

--- a/spa-html-template/index.html
+++ b/spa-html-template/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <title>Nanna digital</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta name="description" content="Somos una empresa de marketing digital global especializada en SEO, SEM, redes sociales, programación y más. ¡Potencia tu presencia en línea con nosotros!">
+    <meta name="keywords" content="marketing digital, community manager, portfolio, SEO, SEM, redes sociales, presencia en línea">
+</head>
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -49,11 +50,11 @@
     <div class="container-fluid bg-light d-none d-lg-block">
         <div class="row py-2 px-lg-5">
             <div class="col-lg-6 text-left mb-2 mb-lg-0">
-                <div class="d-inline-flex align-items-center">
-                    <small><i class="fa fa-phone-alt mr-2"></i>+012 345 6789</small>
+                <!-- <div class="d-inline-flex align-items-center">
+                    <small><i class="fa fa-phone-alt mr-2"></i>Nanna Digital</small>
                     <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>lorena@gmail.com</small>
-                </div>
+                    <small><i class="fa fa-envelope mr-2"></i>Digital Services</small>
+                </div> -->
             </div>
             <div class="col-lg-6 text-right">
                 <div class="d-inline-flex align-items-center">
@@ -638,13 +639,13 @@
                         </div>
                     </div>
                 </div> -->
-                <!-- <div class="col-lg-3 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
                         <img class="img-fluid" src="img/team-2.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <h5 class="text-white text-uppercase">Cory Brown</h5>
-                                <p class="m-0">Spa & Beauty Expert</p>
+                                <h5 class="text-white text-uppercase">Lorena Araya</h5>
+                                <p class="m-0">Creative Director</p>
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <a class="btn btn-outline-primary btn-square mr-2" href="#"><i
@@ -658,14 +659,14 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
                         <img class="img-fluid" src="img/team-3.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <h5 class="text-white text-uppercase">Lorena Araya</h5>
-                                <p class="m-0">Creative Director</p>
+                                <h5 class="text-white text-uppercase">Magalí Mosqueira</h5>
+                                <p class="m-0">Marketing Specialist</p>
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <!-- <a class="btn btn-outline-primary btn-square mr-2" href="#"><i
@@ -685,15 +686,15 @@
                         <img class="img-fluid" src="img/team-4.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <h5 class="text-white text-uppercase">Magalí Mosqueira</h5>
-                                <p class="m-0">Marketing Specialist</p>
+                                <h5 class="text-white text-uppercase">Claudia Romina Alegre</h5>
+                                <p class="m-0">Specialist Consultant</p>
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <!-- <a class="btn btn-outline-primary btn-square mr-2" href="#"><i
                                         class="fab fa-twitter"></i></a>
                                 <a class="btn btn-outline-primary btn-square mr-2" href="#"><i
                                         class="fab fa-facebook-f"></i></a> -->
-                                <a class="btn btn-outline-primary btn-square mr-2" href="#"><i
+                                <a class="btn btn-outline-primary btn-square mr-2" href="https://www.linkedin.com/in/claudia-romina-alegre/"><i
                                         class="fab fa-linkedin-in"></i></a>
                                 <!-- <a class="btn btn-outline-primary btn-square" href="#"><i
                                         class="fab fa-instagram"></i></a> -->
